--- a/opdracht1/styles/style.css
+++ b/opdracht1/styles/style.css
@@ -1,57 +1,148 @@
-/* CSS Document */
 
-/*********/
-/* FONTS */
-/*********/
-@font-face {
-	font-family: 'eenfont';
-	src: url('../fonts/eenfont.woff2') format('woff2'),
-			 url('../fonts/eenfont.woff') format('woff');
-	font-weight: normal;
-	font-style: normal;
+
+:root{
+	--main-color: #06D500;
+	--light-color: rgb(202, 255, 43);
+}
+
+@media (prefers-color-scheme:dark) {
+	:root {
+		--main-color: darkgreen;
+		--light-color: rgb(60, 177, 64);
+	}
+}
+
+/****Letters****/
+
+h1{
+    font-family: 'Bodoni Moda', serif;
+    font-family: 'Exo', sans-serif;
+    font-size: 11em;
+    color: var(--main-color);
+    margin-top: 1.5em;
+    margin-left: 2.7em;
+	letter-spacing: -0.11em;
+}
+
+h1 > span{
+	display: inline-block;
+	animation: text-up 1.7s ease-in-out;
+}
+
+h1 > span:nth-of-type(1){
+    position: relative;
+    animation-delay: 0.0s;
+}
+
+h1 > span:nth-of-type(2){
+    position: relative;
+    animation-delay: 0.2s;
+}
+
+h1 > span:nth-of-type(3){
+    position: relative;
+    animation-delay: 0.3s;
+}
+
+h1 > span:nth-of-type(4){
+    position: relative;
+	animation-delay: 0.5s;
+}
+
+@keyframes text-up{
+	0%{
+	  transform: translateY(0em);
+	}
+	60%{
+	  transform: translateY(-1.7em);
+	}
+	100%{
+	  transform: translateY(0em);
+	}
+  }
+
+/****lime wheel****/
+
+ul {
+	position:relative;
+	top: -24.5em;
+	left: 9em;
+	
+	margin:0;
+	padding:0;
+	list-style:none;
+	
+	width:18em;
+	height:18em;
+	
+	background-image:
+		radial-gradient(
+			var(--main-color) 0.7em, 
+			transparent 0.7em,
+			transparent 8em, 
+			var(--main-color) 8em
+		);
+	
+	border-radius:50%;
+	animation: wheel-roll 2.4s ease-in-out;
+}
+
+li {
+	position:absolute;
+	top:2em;
+	left:4em;
+		
+	width:10em;
+	height:5.9em;
+	
+	background-color: var(--light-color);
+	
+	border-radius:50% 50% 0% 0% / 50% 50% 0% 0% ;
+	
+	clip-path: polygon(
+		16% 0, 
+		84% 0,  
+		50% 100%,
+		16% 0 
+	);
+
+    transform-origin:center calc(100% + 1.1em);
+	
 
 }
 
-
-
-
-
-/**************/
-/* CSS REMEDY */
-/**************/
-*, *::after, *::before {
-  box-sizing:border-box;  
+li:nth-of-type(1) {
+	transform:rotate(0deg);
 }
 
-button, summary {
-	cursor: pointer;
+li:nth-of-type(2) {
+	transform:rotate(60deg);
 }
 
-
-
-
-
-/*********************/
-/* CUSTOM PROPERTIES */
-/*********************/
-:root {
-	/* startje */
-	--color-main:#111;
-	--color-background:#eee;
+li:nth-of-type(3) {
+	transform:rotate(120deg);
 }
 
-
-
-
-
-/****************/
-/* JOUW STYLING */
-/****************/
-body {
-  font-family:eenfont, sans-serif;
-  color:var(--color-main);
-  background-color:var(--color-background);
+li:nth-of-type(4) {
+	transform:rotate(180deg);
 }
 
-/* jouw code */
+li:nth-of-type(5) {
+	transform:rotate(240deg);
+}
+
+li:nth-of-type(6) {
+	transform:rotate(300deg);
+}
+
+@keyframes wheel-roll{
+	0%{
+	  transform: translatex(0em) rotate(0);
+	}
+	
+	
+	100%{
+		transform: translatex(52.5em) rotate(.93turn);
+	  }
+  }
 
